Changed the height of the UL in events to be fixed to align the footer better, added margin to the right to past events, added format for next event in progress

--- a/src/DotNetUserGroup.Website/Content/home/home.css
+++ b/src/DotNetUserGroup.Website/Content/home/home.css
@@ -1,6 +1,6 @@
 /* Syntax error: Undefined variable: "$blue-background".
         on line 3 of C:\Users\Admin\Documents\GitHub\UserGroupWebsite\src\DotNetUserGroup.Website\Content\home\home.scss, in `event-box'
-        from line 36 of C:\Users\Admin\Documents\GitHub\UserGroupWebsite\src\DotNetUserGroup.Website\Content\home\home.scss
+        from line 41 of C:\Users\Admin\Documents\GitHub\UserGroupWebsite\src\DotNetUserGroup.Website\Content\home\home.scss
   Use --trace for backtrace.
 
  */
